ui/assets/css/main.css
/* ... */
/* ==========================================================================
   User Profile
   ========================================================================== */
#profile-page {
    display: flex;
    justify-content: space-between;
}

.user-profile {
    color: #919A9F;
    display: flex;
    flex-direction: column;
    text-align: center;
}

.user-profile img {
    border-radius: 50%;
    float: left;
    width: 100px;
    height: 100px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10px;
}

/* Activity feed
   ========================================================================== */
.activity-feed {
    padding: 15px;
    list-style: none;
}

.activity-feed .feed-item {
    position: relative;
    padding-bottom: 20px;
    padding-left: 30px;
    border-left: 2px solid #e4e8eb;
}

.activity-feed .feed-item:last-child {
    border-color: transparent;
}

.activity-feed .feed-item::after {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: -6px;
    width: 10px;
    height: 10px;
    border-radius: 6px;
    background: #fff;
    border: 1px solid #f0776c;
}

.activity-feed .feed-item .date {
    display: block;
    position: relative;
    top: -5px;
    color: #8c96a3;
    text-transform: uppercase;
    font-size: 13px;
}

.activity-feed .feed-item .text {
    position: relative;
    top: -3px;
}


/* ==========================================================================
   Admin page
   ========================================================================== */
#admin-page {
    display: flex;
    justify-content: space-between;
}

#admin-page i {
    padding: 10px;
}

#admin-page i:hover {
    cursor: pointer;
}

.fa-plus {
    color: #53e3a6;
}

.fa-trash-alt {
    color: #f0776c;
}

/* New Meetup
   ========================================================================== */
#new-meetup {
    margin: 20px auto;
    padding: 30px 25px;
    border: 1px solid #c4c4c4;
    max-width: 50%;
}

h1.new-title {
    margin: -28px -25px 25px;
    padding: 15px 25px;
    line-height: 30px;
    font-size: 25px;
    font-weight: 300;
    color: #adadad;
    text-align:center;
    background: #f7f7f7;

}

.new-input {
    width: 100%;
    height: 50px;
    margin-bottom: 25px;
    padding-left:10px;
    font-size: 15px;
    background: #fff;
    border: 1px solid #ccc;
    border-radius: 4px;
}

#new-meetup-form textarea {
    width: 100%;
    height: 150px;
    padding: 12px 20px;
    box-sizing: border-box;
    border-radius: 4px;
    font-size: 15px;
    resize: none;
    border: 1px solid #ccc;
    font-family: Roboto, serif;
}

.new-input:focus {
    border-color:#6e8095;
    outline: none;
}

#new-meetup-form textarea:focus {
    border-color:#6e8095;
    outline: none;
}

.new-button {
    width: 100%;
    height: 50px;
    padding: 0;
    font-size: 20px;
    color: #fff;
    text-align: center;
    background: #f0776c;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    outline:0;
}

.cancel
{
    text-align: center;
    margin-top: 5px;
    margin-bottom: 0;
}

/* Delete Meetup
   ========================================================================== */
.modal-window {
    position: fixed;
    background-color: rgba(0, 0, 0, 0.3);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 999;
    opacity: 0;
    pointer-events: none;
    transition: all 0.3s;
}
.modal-window:target {
    opacity: 1;
    pointer-events: auto;
}
.modal-window > div {
    width: 400px;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    padding: 2em;
    background: #ffffff;
    color: #f0776c;
}
.modal-window header {
    font-weight: bold;
}
.modal-window h1 {
    font-size: 150%;
    margin: 0 0 15px;
    color: #333333;
}

.modal-close {
    color: #aaa;
    line-height: 50px;
    font-size: 80%;
    position: absolute;
    right: 0;
    text-align: center;
    top: 0;
    width: 70px;
    text-decoration: none;
}
.modal-close:hover {
    color: #53e3a6;
}

.modal-button {
    width: 100%;
    height: 50px;
    padding: 0;
    font-size: 20px;
    color: #fff;
    text-align: center;
    background: #f0776c;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    outline:0;
    margin-top: 10px;
}


/* ==========================================================================
   Footer
   ========================================================================== */
.footer {
    left: 0;
    bottom: 0;
    width: 100%;
    color: #919A9F;
    text-align: center;
    position: absolute;
    height: 50px;
}


/* ==========================================================================
   Responsiveness
   ========================================================================== */

/* Nav
   ========================================================================== */
@media (max-width:600px) {
    .nav > .nav-btn {
        display: inline-block;
        position: absolute;
        right: 0;
        top: 0;
    }
    .nav > .nav-btn > label {
        display: inline-block;
        width: 50px;
        height: 50px;
        padding: 13px;
    }
    .nav > .nav-btn > label > span {
        display: block;
        width: 25px;
        height: 10px;
        border-top: 2px solid #eee;
    }
    .nav > .nav-links {
        position: absolute;
        display: block;
        width: 100%;
        background-color: #333;
        height: 0;
        transition: all 0.3s ease-in;
        overflow-y: hidden;
        top: 50px;
        left: 0;
        z-index: 1;
    }
    .nav > .nav-links > a {
        display: block;
        width: 100%;
    }
    .nav > #nav-check:not(:checked) + .nav-links {
        height: 0;
    }
    .nav > #nav-check:checked + .nav-links {
        height: calc(100vh - 50px);
        overflow-y: auto;
    }
}
/* ... */

